# WhatsAppReminders

./: Dockerfile  README.md  TODO  package-lock.json  package.json
gateway/PlanetScale/: Basics.ts  Users.ts  WhatsApp.ts
reminders-scheduler-rs/: Cargo.toml  README.md  exampleLambdaPayload.json
reminders-scheduler-rs/new-lambda-project/: Cargo.toml
reminders-scheduler-rs/src/: main.rs
reminders-scheduler-rs/src/models/: reminders.rs
src/: server.ts
src/controllers/: index.ts
src/controllers/routes/: WhatsApp.ts
src/controllers/utils/: Validations.ts  Validator.ts
src/controllers/whatsApp/: NotificationWebhookController.ts  WebHook.ts  WhatsAppPayloadCreation.ts
src/entities/: Messages.ts  OpenAI.ts  Reminder.ts  TelegramLogger.ts  User.ts  WhatsApp.ts  Whisper.ts
src/gateway/PlanetScale/: Basics.ts  Messages.ts  Users.ts  Utils.ts  WhatsApp.ts
src/gateway/dynamoDB/: DynamoDBParameters.ts  Messages.ts  Reminders.ts  Users.ts  Utils.ts  createTable.ts
src/interactors/: WhatsAppWebhook.ts
