[package]
name = "reminders-scheduler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "tls-native-tls", "chrono" ] }
tokio = { version = "1", features = ["full"] }
whatsapp-cloud-api = "0.3.1"
