[package]
name = "reminders-scheduler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio", "tls-rustls", "chrono" ] }
tokio = { version = "1", features = ["full"] }
whatsapp-cloud-api = "0.3.1"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["cloudwatch_events"] }
lambda_runtime = "0.8.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
aws-sdk-dynamodb = "1.40.0"
aws-config = "1.5.5"
chrono = { version = "0.4", features = ["serde"] }